# vioratalk-mindwave-mate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: CONTRIBUTING.md  architecture.md  requirements.md
messages/en/: errors.yaml  ui.yaml
messages/ja/: errors.yaml  ui.yaml
scripts/: create_phase4_test_audio.py  generate_test_audio.py  investigate_pyttsx3.py  investigate_pyttsx3_debug.py  investigate_pyttsx3_real.py  test_pyttsx3_timing.py
scripts/manual_tests/feature/: test_manual_faster_whisper.py  test_manual_gemini.py  test_manual_mock_conversation.py  test_manual_phase4_complete.py  test_manual_pyttsx3.py  test_manual_v040_engine.py  test_manual_v050_dialogue.py
src/vioratalk/: __init__.py
src/vioratalk/configuration/: __init__.py  config_manager.py  settings.py
src/vioratalk/core/: __init__.py  base.py  dialogue_config.py  dialogue_manager.py  dialogue_state.py  error_handler.py  exceptions.py  i18n_manager.py  vioratalk_engine.py
src/vioratalk/core/api/: __init__.py  base.py
src/vioratalk/core/llm/: __init__.py  base.py  gemini_engine.py  llm_manager.py
src/vioratalk/core/setup/: __init__.py  auto_setup_manager.py  types.py
src/vioratalk/core/stt/: __init__.py  base.py  faster_whisper_engine.py  vad.py
src/vioratalk/core/tts/: __init__.py  base.py  pyttsx3_engine.py  tts_manager.py
src/vioratalk/infrastructure/: __init__.py  audio_capture.py  credential_manager.py  model_download_manager.py
src/vioratalk/services/: __init__.py  background_service_manager.py
src/vioratalk/utils/: __init__.py  logger_manager.py  progress.py
tests/: __init__.py  conftest.py  test_import.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_dialogue_integration.py  test_mock_engines_integration.py  test_phase1_initialization.py  test_phase2_integration.py  test_phase4_real_engines.py
tests/mocks/: __init__.py  mock_character_manager.py  mock_llm_engine.py  mock_stt_engine.py  mock_tts_engine.py
tests/unit/: __init__.py  test_audio_capture.py  test_auto_setup_manager.py  test_background_service_manager.py  test_base.py  test_base_api_client.py  test_config_manager.py  test_credential_manager.py  test_dialogue_config.py  test_dialogue_manager.py  test_dialogue_state.py  test_exceptions.py  test_faster_whisper_engine.py  test_gemini_engine.py  test_i18n_manager.py  test_llm_manager.py  test_logger_manager.py  test_mock_character_manager.py  test_mock_llm_engine.py  test_mock_stt_engine.py  test_mock_tts_engine.py  test_model_download_manager.py  test_pyttsx3_engine.py  test_tts_manager.py  test_types.py  test_vad.py  test_vioratalk_engine.py
