[tool.poetry]
name = "vioratalk"
version = "0.0.1"
description = "AI Voice Assistant with Emotional Expression"
authors = ["MizuiroDeep <36126374+MizuiroDeep@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "vioratalk", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.12.0"
isort = "^5.13.0"
flake8 = "^6.1.0"
mypy = "^1.5.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false